# tinyrenderer

./: CMakeLists.txt  main.cpp
lesson1/: lesson1.cpp  lesson1.h
